<resources>
    <string name="app_name">Compass</string>
    <string name="no_gps_network">Device hasn\'t gps and network</string>
    <string name="noti_service_not_available">Service Not Available</string>
    <string name="text_invalid_lat_long_used">Invalid lat long used</string>
    <string name="text_no_address_found">No address found</string>
    <string name="text_address_found">Address found</string>
    <string name="text_decription_notification_warning">If you see a warning icon in yellow @ or Magnetic Field’s value being low or medium, you’ll need to calibrate your compass.</string>
    <string name="text_decription_action_warning">Make a figure 8 until your compass is calibrated. You should only have to do this a few times.</string>
    <string name="title_magnetic">Magnetic Field : </string>
    <string name="title_calibrate">Calibrate</string>
    <string name="magnetic_calibrate">Low</string>
    <string name="medium_calibrate">Medium</string>
    <string name="hight_calibrate">Hight</string>
    <string name="text_button_rate">Rate Now</string>
    <string name="text_button_rate_later">Later</string>
    <string name="text_button_no_thanks">No, Thanks</string>
    <string name="text_title_dialog_rate_app">Do you enjoy this app?</string>
    <string name="text_message_dialog_rate_app">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank for your support!</string>
    <string name="text_direction">%d\u00b0 %s</string>
    <string name="setting_title">Setting</string>
    <string name="share_title">Share App</string>
    <string name="rate_us_title">Rate Us</string>
    <string name="about_us_title">About Us</string>
    <string name="text_decription1">Gps Compass Navigation Map: is the best smart compass for android,user-friendly with a beautifully crafted design is the most gorgeous best compass app in the store.</string>
    <string name="text_decription2">It features everything you could ever need to get by in the great outdoors, including a digital compass GPS that shows direction relative to the geographic cardinal directions, with true north and magnetic North, south, east, and west coordinates, speed of travel and map that makes navigating your world faster and easier.</string>
    <string name="text_decription3">It helps you locate your current location and you can find your way easily through the best compass app with gps map.</string>
    <string name="text_decription4">If you like the app, please help we 5 star review.Thank you very much!</string>
    <string name="text_address_tv_address">Address :</string>
    <string name="text_address_latitude">Latitude :</string>
    <string name="text_address_longitude">Longitude :</string>
    <string name="text_address_networks_gps_20_m">NetWorks GPS ±20 m</string>
    <string name="text_calibrate_low">Low</string>
    <string name="text_location_city">My Location</string>
    <string name="text_compass_dg_direction">ES</string>
    <string name="text_title_dialog_policy_app">Policy</string>
    <string name="text_button_agree">I Agree</string>
    <string name="text_button_exit">Exit</string>
    <string name="text_message_dialog_policy_app">Privacy Policy: Location permission is required for geotagging, but it only serves the purpose of using the application. The information that we request will be retained on your device and is not collected by us in any way.</string>
    <string name="text_button_onlie_help">Online Help</string>
    <string name="text_location_lat_long">.....</string>
    <string name="search_here">Search here</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="turn_on_internet">Check your network information</string>
    <string name="please">Please !</string>
    <string name="ok">OK</string>

    <string name="text_like_Rate">Rating 5 star</string>
    <string name="text_message_content">If you like this app, please rate it\n  and give a good comment  \n for some suggestions</string>
    <string name="API_WEATHER_KEY">f6504cbbce13fbea7eafdb6ed5846ab7 </string>
    <string name="text_send_email_feedback">FeedBack</string>

</resources>
