<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_about"
        android:layout_margin="@dimen/margin_common_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_decription_one_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_decription1"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_h4" />


        <TextView
            android:id="@+id/tv_decription_tow_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common_layout"
            android:text="@string/text_decription2"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_h4" />

        <TextView
            android:id="@+id/tv_decription_three_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common_layout"
            android:text="@string/text_decription3"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_h4" />

        <TextView
            android:id="@+id/tv_decription_four_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common_layout"
            android:text="@string/text_decription4"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_h4" />
    </LinearLayout>
</RelativeLayout>