<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        app:srcCompat="@drawable/ic_waring_check_internet" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/please"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/turn_on_internet"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:id="@+id/tv_dialog_ok"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/border_text"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/ok"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_15sdp" />
</LinearLayout>