<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:id="@+id/ln_all_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        android:layout_below="@id/toolbar_setting"
        android:layout_margin="@dimen/margin_common_layout"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ln_about_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_height_icon_setting"
            android:background="@drawable/background_button_click_rectangle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_about_us"
                android:layout_width="@dimen/width_height_icon_setting"
                android:layout_height="match_parent"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_about" />

            <TextView
                android:id="@+id/tv_about_us"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="33dp"
                android:gravity="center_vertical"
                android:text="@string/about_us_title"
                android:textColor="@color/color_text"
                android:textSize="@dimen/margin_common_layout" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_rate_app_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_height_icon_setting"
            android:background="@drawable/background_button_click_rectangle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_rate"
                android:layout_width="@dimen/width_height_icon_setting"
                android:layout_height="@dimen/width_height_icon_setting"
                android:scaleType="center"
                android:tint="@color/color_white"
                app:srcCompat="@drawable/ic_stars" />

            <TextView
                android:id="@+id/tv_name_rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="33dp"
                android:gravity="center_vertical"
                android:text="@string/rate_us_title"
                android:textColor="@color/color_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_share_app_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_height_icon_setting"
            android:background="@drawable/background_button_click_rectangle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="@dimen/width_height_icon_setting"
                android:layout_height="@dimen/width_height_icon_setting"
                android:scaleType="center"
                android:tint="@color/color_white"
                app:srcCompat="@drawable/ic_setting_share" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="33dp"
                android:gravity="center_vertical"
                android:text="@string/share_title"
                android:textColor="@color/color_text"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <!--<com.google.android.gms.ads.NativeExpressAdView xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/ads_banner_setting"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/ln_all_setting"-->
        <!--app:adSize="SMART_BANNER"-->
        <!--app:adUnitId="ca-app-pub-5895279942217598/2490904923" />-->

</RelativeLayout>