<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_location"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/toolbar_location"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/color_white" />

    <LinearLayout
        android:id="@+id/ln_info_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_location"
        android:layout_marginLeft="@dimen/margin_common_layout"
        android:layout_marginRight="@dimen/margin_common_layout"
        android:layout_marginBottom="@dimen/margin_bottom_linear_address_cp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_start_text_address_cp"
            android:layout_marginTop="@dimen/margin_bottom_linear_address_cp"
            android:text="@string/text_address_tv_address"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_address_cp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_full_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_text_address_cp"
            android:layout_marginTop="@dimen/margin_top_text_address_cp"
            android:textColor="@color/colorGreen"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_text_address_cp"
                    android:layout_marginTop="@dimen/margin_bottom_linear_address_cp"
                    android:text="@string/text_address_latitude"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/text_address_cp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_lat_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_text_address_cp"
                    android:layout_marginTop="@dimen/margin_top_text_address_cp"
                    android:textColor="@color/colorGreen"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_text_address_cp"
                    android:layout_marginTop="@dimen/margin_bottom_linear_address_cp"
                    android:text="@string/text_address_longitude"
                    android:textColor="@color/color_white"
                    android:gravity="right"
                    android:textSize="@dimen/text_address_cp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_long_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginStart="@dimen/margin_start_text_address_cp"
                    android:layout_marginTop="@dimen/margin_top_text_address_cp"
                    android:textColor="@color/colorGreen"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_compass_share_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/btn_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Share Location"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </LinearLayout>


    <fragment
        android:id="@+id/address_map_view"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ads_banner_address"
        android:layout_below="@+id/ln_info_location"
        android:layout_marginLeft="@dimen/margin_bottom_linear_address_cp"
        android:layout_marginTop="@dimen/margin_bottom_linear_address_cp"
        android:layout_marginRight="@dimen/margin_bottom_linear_address_cp" />

<!--    <com.google.android.gms.ads.AdView xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/ads_banner_address"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="@dimen/margin_start_text_address_cp"-->
<!--        app:adSize="SMART_BANNER"-->
<!--        app:adUnitId="@string/banner_id_1" />-->
    <RelativeLayout
        android:id="@+id/ads_banner_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_start_text_address_cp">
    <com.facebook.msdk.BannerCustom
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="@dimen/_1sdp"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_id_1"/>
</RelativeLayout>
    </RelativeLayout>

